fixing thread safety issues